# bevy_quake_map

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
assets/: test.map
crates/bevy_quake_map_editor/: Cargo.toml
crates/bevy_quake_map_editor/src/: io.rs  main.rs  project.rs
crates/bevy_quake_map_editor/src/document/: game_settings.rs  mod.rs
crates/bevy_quake_map_editor/src/editor/: mod.rs
crates/bevy_quake_map_editor/src/editor/components/: mod.rs  project_panel.rs
crates/bevy_quake_map_editor/src/editor/components/tab_layout/: mod.rs
crates/bevy_quake_map_editor/src/editor/components/tab_layout/entity_tab_item/: mod.rs
crates/bevy_quake_map_editor/src/editor/widgets/: mod.rs
crates/bevy_quake_map_editor_common/: Cargo.toml
crates/bevy_quake_map_editor_common/src/: io.rs
crates/quake_map_project_manager/: Cargo.toml
crates/quake_map_project_manager/src/: io.rs  main.rs  project.rs
crates/quake_map_project_manager/src/document/: entity.rs  mod.rs
crates/quake_map_project_manager/src/editor/: component.rs  mod.rs  project_panel.rs
crates/quake_map_project_manager/src/editor/components/: entity_definition_editor.rs  mod.rs  project_panel.rs
crates/quake_map_project_manager/src/editor/components/tab_layout/entity_tab_item/: entity_definition_editor.rs
crates/quake_map_project_manager/src/editor/widgets/: mod.rs  reorderable_list.rs
examples/: basic.rs
src/: lib.rs  loader.rs  test_data.rs  test_utils.rs
src/data/: brush.rs  brush_face.rs  mod.rs
src/fgd/: mod.rs  to_fgd_literal.rs
src/fgd/test_data/: test_output.fgd
src/game_config/: entity_settings.rs  face_attribs.rs  filesystem_settings.rs  mod.rs  tags.rs  texture_settings.rs
src/loader/: asset.rs  asset_provider.rs  mod.rs  spawner.rs  utils.rs
src/map_data/: brush.rs
src/parsing/: components.rs  data.rs  mod.rs  test_data.rs  util.rs
