[package]
name = "quake_map"
version = "0.1.0"
edition = "2021"

[dependencies]

# bevy
bevy = "0.7"
anyhow = "1.0"
heron = { version = "3.1", features = ["3d"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# other
async-trait = "0.1"
thiserror = "1.0"
nom = "7.1"
glam = { version = "0.20", features = ["serde"] }
