[package]
name = "bevy_quake_map"
version = "0.1.0"
edition = "2021"
description = "Quake .map support for the Bevy game engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Fumohouse/bevy_quake_map/"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "quake", "map"]
exclude = ["assets/"]

[workspace]
members = ["crates/*"]

[dependencies]
# bevy
bevy = "0.7"
anyhow = "1.0"
bevy_rapier3d = "0.14"

# serde
serde = { version = "1.0", features = ["derive"] }

# other
async-trait = "0.1"
thiserror = "1.0"
nom = "7.1"
glam = { version = "0.20", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"

bevy = { version = "0.7", features = ["jpeg"] }
bevy_flycam = "0.7"
bevy-inspector-egui = "0.11"

[[example]]
name = "basic"
path = "examples/basic.rs"