[package]
name = "bevy_quake_map_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy
bevy = "0.7"
bevy_egui = "0.14"
bevy_quake_map = { path = "../../" }
bevy_quake_map_editor_common = { path = "../bevy_quake_map_editor_common" }
bevy_infinite_grid = "0.2"
bevy_flycam = "0.7"

rfd = "0.9"
dirs = "4.0"
thiserror = "1.0"
futures-lite = "1.11"
serde = "1.0"
ron = "0.7"
parking_lot = "0.12"
